--- a/src/renderer/src/assets/layout.css
+++ b/src/renderer/src/assets/layout.css
@@ -4,7 +4,6 @@ body{
   box-sizing: border-box;
 }
 
-
 /* Webkit Browsers */
 ::-webkit-scrollbar {
   width: 10px !important;
@@ -51,35 +50,79 @@ body{
 /* Primary Menu */
 .primary-menu {
   width: 180px;
-  background-color: #f6f8fc;
+  /* background-color: #f6f8fc; */
+  background-color: #eef5fe;
   display: flex;
   flex-direction: column;
-  margin: 0 8px;
+  /* margin: 0 8px; */
 }
 
+.primary-menu li{
+  border-radius: 30px;
+}
 .primary-menu li:hover{
-  background-color: #eaebef;
+  background-color: #acd2ff;
 }
-
-.primary-menu li{
-  border-radius: 24px;
-}
-.primary-menu li{
-  border-radius: 24px;
+.primary-menu li .Mui-selected {
+  background-color: #D5E2F4;
+  border-radius: 30px;
 }
 .primary-menu li button{
   padding: 0;
 }
+
+
+
+/* Secondary Menu */
 .secondary-menu {
     width: 140px;
-    border-right: 1px solid #ddd;
-    background-color: #f8f8f8;
+    background-color: #f6f8fc;
 }
+
+.secondary-menu li{
+  border-radius: 30px;
+  padding: 0;
+}
+.secondary-menu li:hover{
+  background-color: #abd0fe;
+}
+.secondary-menu li .Mui-selected {
+  background-color: #d5e2f4;
+  border-radius: 30px;
+}
+.secondary-menu li div{
+  height: 50px;
+}
+.secondary-menu li button{
+  padding: 0;
+}
+.secondary-menu-text{
+  display: -webkit-box;
+  -webkit-line-clamp: 1;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+
+
 /* Main Content Area */
 .content-area {
   flex: 1;
-  height: calc(100vh - 80px);
+  height: calc(100vh - 41px);
+  /* max-width: calc(100vw - 41px); */
   padding: 20px;
   background-color: #fff;
   overflow-y: auto;
+}
+.content-area .log-line {
+  padding: 4px 8px;
+  margin: 0;
+  font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas,
+    "Liberation Mono", "Courier New", monospace;
+  font-size: 12px;
+  line-height: 1.45;
+  white-space: pre-wrap;
+  word-break: break-word;
+  border-radius: 0 10px 10px 0;
 }
