--- a/src/renderer/src/components/PageDocs/index.css
+++ b/src/renderer/src/components/PageDocs/index.css
@@ -1,6 +1,6 @@
 .docs-article img {
     display: block;
-    max-width: 600px;
+    max-width: 90%;
     height: auto;
     margin: 16px auto;
     border-radius: 6px;
